# RecoverAUFromOpenFace

./: .gitignore  OpenFace.sln  README.md  ReCoverAU_logic.md  analyze_dumps.py  debug_au_names.py  debug_au_order.py  debug_au_order_v2.py  debug_cp1.py  debug_cp1_v2.py  debug_cp7.py  debug_cp8.py  debug_csv_source.py  debug_frameid.py  debug_offset_calc.py  deep_analyze.py  drop_au_columns.py  dump01_report.json  dump02_report.json  dump_debug_report.md  pipeline_test.ps1  request_dump_comparation.json  revised_dump_comparation_plan.md  situation_explain1.json  situation_explain2.json  verify_recovery.py
exe/FaceLandmarkImg/: FaceLandmarkImg.vcxproj
exe/FaceLandmarkVid/: FaceLandmarkVid.vcxproj
exe/FaceLandmarkVidMulti/: FaceLandmarkVidMulti.vcxproj
exe/FeatureExtraction/: FeatureExtraction.cpp  FeatureExtraction.vcxproj
exe/Recording/: Recording.vcxproj
exe/RecoverAU/: CMakeLists.txt  RecoverAU.cpp  RecoverAU.vcxproj  pseudo_cpp.txt  verify_pipeline.py
exe/RecoverAU/x64/Release/RecoverAU.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RecoverAU.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lib/local/CppInerop/: CppInerop.vcxproj
lib/local/FaceAnalyser/: FaceAnalyser.vcxproj
lib/local/GazeAnalyser/: GazeAnalyser.vcxproj
lib/local/LandmarkDetector/: LandmarkDetector.vcxproj
lib/local/Utilities/: Utilities.vcxproj
samples/recover_au_test/: ofstructreport.md  test_bash1.csv  test_bash1.hog  test_bash1_cppoutput.csv  test_bash1_noAU.csv  test_bash1_of_details.txt  test_bash1_recovered.csv
(+8 files in other folders)
